crates/subgraph/tests/ui/build_on_empty_builder.stderr
error[E0599]: no method named `build` found for struct `SubgraphApiBuilder` in the current scope
 --> tests/ui/build_on_empty_builder.rs:8:36
  |
8 |     let _ = SubgraphApi::builder().build();
  |                                    ^^^^^ method not found in `SubgraphApiBuilder`
  |
  = note: the method was found for
          - `SubgraphApiBuilder<ChainIdSet, ApiKeySet, TransportSet>`
          - `SubgraphApiBuilder<ChainIdSet, ApiKeySet>`
